# HK_AIDC_News_Collector

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  setup_keys.py  test_worker.py
data/sources/: seed_sources.yaml
docs/adr/: 0001-pipeline-orchestration-and-database-seam.md  0002-document-fetching-and-cloudflare-evasion-seam.md  0003-llm-client-domain-leakage-seam.md
scripts/: migrate_db.py
src/hk_aidc_news/: __init__.py  app.py  config.py  db.py  log_stream.py  sources.py  worker.py
src/hk_aidc_news_collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api_configs.py  test_cluster_api.py  test_clustering_service.py  test_config.py  test_db.py  test_discovery_service.py  test_enrichment_service.py  test_health.py  test_ingestion_service.py  test_jobs.py  test_log_stream.py  test_migrate_db_seeding.py  test_models.py  test_pipeline_persistence.py  test_prefilter.py  test_sources.py  test_worker.py
tests/api/: test_article_actions.py  test_source_articles.py  test_sources.py
tests/discovery/: test_firecrawl.py
tests/llm/: test_client.py
web/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
web/app/: CleanupButton.tsx  SidebarLayout.tsx  SplitViewDashboard.tsx  layout.tsx  page.tsx
web/components/: AnalystActionPanel.tsx
web/lib/: api.ts  format.ts  types.ts
web/tests/: api.test.ts  (+3 more)
(+83 files in other folders)
